# DGA_detection

./: .gitignore  DGA_detection.ipynb  Makefile  README.md  pyproject.toml
data/Adversarial-DGA-Datasets/: Adversarial-DGA-Datasets.41K.csv  README.md  data_consolidation.py
data/benign/: Readme.md
data/domain_generation_algorithms/: data_consolidation.py
data/domain_generation_algorithms/banjori/: dga.py
data/domain_generation_algorithms/bazarbackdoor/: dga.py
data/domain_generation_algorithms/chinad/: dga.py
data/domain_generation_algorithms/corebot/: dga.py
data/domain_generation_algorithms/dircrypt/: dga.py
data/domain_generation_algorithms/dnschanger/: dga.py
data/domain_generation_algorithms/fobber/: dga.py
data/domain_generation_algorithms/fosniw/: dga.py
data/domain_generation_algorithms/gozi/: dga.py
data/domain_generation_algorithms/locky/: dgav2.py
data/domain_generation_algorithms/monerodownloader/: dga.py
data/domain_generation_algorithms/mydoom/: dga.py
data/domain_generation_algorithms/necurs/: dga.py
data/domain_generation_algorithms/newgoz/: dga.py
data/domain_generation_algorithms/nymaim/: dga.py
data/domain_generation_algorithms/nymaim2/: dga.py
data/domain_generation_algorithms/padcrypt/: dga.py
data/domain_generation_algorithms/pitou/: dga.py
data/domain_generation_algorithms/pizd/: dga.py
data/domain_generation_algorithms/proslikefan/: dga.py
data/domain_generation_algorithms/pushdo/: dga.py
data/domain_generation_algorithms/qadars/: dga.py
data/domain_generation_algorithms/qakbot/: dga.py
data/domain_generation_algorithms/qsnatch/: dga_a.py
data/domain_generation_algorithms/ramdo/: dga.py
data/domain_generation_algorithms/ramnit/: dga.py
data/domain_generation_algorithms/reconyc/: dga.py
data/domain_generation_algorithms/shiotob/: dga.py
data/domain_generation_algorithms/simda/: dga.py
data/domain_generation_algorithms/sisron/: dga.py
data/domain_generation_algorithms/suppobox/: dga.py  words1.txt
data/domain_generation_algorithms/symmi/: dga.py
data/domain_generation_algorithms/tempedreve/: dga.py
data/domain_generation_algorithms/tinba/: dga.py
data/domain_generation_algorithms/unknown_malware/: dga.py
data/domain_generation_algorithms/unnamed_downloader/: dga.py
data/domain_generation_algorithms/unnamed_javascript_dga/: dga.py
data/english_words/: get_word.py
docs/: evaluations.md  experiments.md  tools.md  workflows.md
experiments/: DGA_detection.ipynb  DGA_detection_refactored.ipynb
models/: catboost.0.942.tokens.model  catboost.0.957.20_bytes.model  catboost.0.962.32_bytes.model  catboost.0.964.26_bytes.model  catboost.0.977.26_ensemble.model
src/: data.py  evaluate.py  features.py  models.py  train.py
(+5 files in other folders)
